--- a/save/jekyll-theme-cayman copy.scss
+++ b/save/jekyll-theme-cayman copy.scss
@@ -113,7 +113,7 @@ a {
   color: $header-heading-color;
   text-align: center;
   //background-color: $header-bg-color;
-  background-image: url('../images/happy_year.jpg'); //linear-gradient(120deg, $header-bg-color-secondary, $header-bg-color);
+  background-image: url('../images/china_background1.jpg'); //linear-gradient(120deg, $header-bg-color-secondary, $header-bg-color);
   background-repeat:no-repeat;
   background-size:cover;
   background-position:center;
