--- a/_sass/jekyll-theme-cayman.scss
+++ b/_sass/jekyll-theme-cayman.scss
@@ -162,7 +162,7 @@ a {
   color: $header-heading-color;
   text-align: center;
 
-  background-image: url("../images/happy_year.jpg");
+  background-image: url("../images/china_background1.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
